<resources>
    <string name="app_name">Home02</string>
    <string name="value">=</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_plus">+</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_minis">-</string>
    <string name="key_point">.</string>
    <string name="key_zero">0</string>
    <string name="key_multi">*</string>
    <string name="separation">/</string>
    <string name="reset">CE</string>
    <string name="zero">0.0</string>
    <string name="theme_one">Theme 1</string>
    <string name="theme_two">Theme 2</string>
    <string name="theme_tree">Theme 3</string>
    <string name="theme_choose">Theme</string>
</resources>