<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        tools:context=".MainActivity">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#827d7d"
            android:text="@string/key_one"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="#827d7d"
            android:text="@string/key_two"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_marginStart="5dp"
            android:backgroundTint="#827d7d"
            android:text="@string/key_three"
            android:textSize="30sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_marginStart="10dp"
            android:backgroundTint="#3fd134"
            android:text="@string/separation"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#827d7d"
            android:text="@string/key_four"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="#827d7d"
            android:text="@string/key_five"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="#827d7d"
            android:text="@string/key_six"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="#3fd134"
            android:text="@string/key_plus"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#827d7d"
            android:text="@string/key_seven"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="#827d7d"
            android:text="@string/key_eight"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="#827d7d"
            android:text="@string/key_nine"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="#3fd134"
            android:text="@string/key_minis"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#adadad"
            android:text="@string/key_point"
            android:textSize="30sp" />

        <Button

            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_marginStart="5dp"
            android:backgroundTint="#827d7d"
            android:text="@string/key_zero"
            android:textSize="30sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_marginStart="10dp"
            android:backgroundTint="#3fd134"
            android:text="@string/key_multi"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:backgroundTint="#a63535"
            android:text="@string/reset"
            android:textSize="35sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_marginStart="5dp"
            android:backgroundTint="#adadad"
            android:text="@string/value"
            android:textColor="@color/black"
            android:textSize="30sp" />


    </GridLayout>
</FrameLayout>